# b3python

./: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  tailwind.config.js
docker/: nginx.conf
src/: manage.py
src/app_blog/: urls.py  views.py
src/app_blog/migrations/: 0001_posting.py
src/app_blog/static/app_blog/: style.css
src/app_blog/templates/app_blog/: base.html  create.html  delete.html  read_all.html  read_one.html  update.html
src/app_blog/templates/app_blog/components/: footer.html  header.html
src/app_blog/views/: __init__.py  apis.py  utility.py  view_create.py  view_delete.py  view_read_all.py  view_read_one.py  view_update.py
src/app_landing/: views.py
src/app_landing/templates/app_landing/: index.html
src/b3python/: hello.py  intro.py  pengedar.py
src/django_modular/: asgi.py  settings.py  urls.py  wsgi.py
