[project]
name = "b3python"
version = "0.0.2"
description = "Belajar Python Batch 3"
authors = [
    {name = "Hanjara", email = "email@mashanz.com"},
]
dependencies = [
    "django==5.1",
    "django-environ==0.11.2",
    "psycopg-binary==3.2.1",
    "psycopg2-binary==2.9.9",
    "granian==1.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
