[project]
name = "b3python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.1",
    "django-environ==0.11.2",
    "granian==1.5.2",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
]

[tool.uv]
dev-dependencies = [
    "ruff==0.6.9",
]
